<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:id="@+id/base_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/grey_background">
        <TextView
            android:id="@+id/help_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorAccent"
            android:text="@string/info_text_for_details"
            android:textStyle="bold"
            android:textAlignment="center"
            android:visibility="gone"
            android:textSize="20dp"/>
        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".details.MovieDetailFragment"
            android:background="@drawable/background_with_shadow">

            <LinearLayout
                android:id="@+id/small_detail_container"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/movie_poster"
                    tools:background="@drawable/error_placeholder"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:scaleType="centerInside"
                    android:layout_weight="1" />

                <LinearLayout
                    android:id="@+id/vrf_container"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="100"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/movie_title"
                        tools:text="Movie Title"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="60"
                        android:textIsSelectable="true"
                        android:textAlignment="center"

                        android:textColor="@color/colorPrimary"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="22sp"/>

                    <TextView
                        android:id="@+id/movie_user_rating"
                        tools:text="Rating"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="15"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:textIsSelectable="true"/>

                    <TextView
                        android:id="@+id/movie_release_date"
                        tools:text="Release Date"
                        style="?android:attr/textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="10"
                        android:textIsSelectable="true" />

                    <ImageButton
                        android:id="@+id/fav_button"
                        style="@style/FavoriteButton"
                        android:layout_width="40dp"
                        android:layout_height="0dp"
                        android:layout_weight="15"
                        android:scaleType="centerCrop"
                        android:gravity="bottom"
                        android:tint="@color/colorPrimary" />

                </LinearLayout>


            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:paddingLeft="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="4dp"
                android:text="@string/overview_label"
                android:textSize="20dp"
                android:textStyle="bold|italic"
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:id="@+id/movie_overview"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textIsSelectable="true"
                android:paddingLeft="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="12dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trailers_label"
                    android:paddingLeft="8dp"
                    android:textSize="20dp"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="italic|bold"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/trailer_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/trailer_list_content"/>
                <TextView
                    android:id="@+id/no_trailer_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_trailer"
                    android:paddingLeft="8dp"
                    android:visibility="gone"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="vertical"
                android:layout_marginTop="12dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@string/reviews_label"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="italic|bold"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/review_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="LinearLayoutManager"
                    tools:listitem="@layout/review_list_content" />
                <TextView
                    android:id="@+id/no_review_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_review"
                    android:paddingLeft="8dp"
                    android:visibility="gone"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>